add EP geolocation
