# swagger/v1/swagger.yaml
@@ -1226,6 +1226,243 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/not_found"
+  "/geolocations":
+    get:
+      summary: Lista de Ubicaciones
+      tags:
+      - Ubicaciones
+      parameters:
+      - name: country_id
+        in: query
+        description: ID del País
+        schema:
+          type: integer
+      - name: department_id
+        in: query
+        description: ID del Departamento
+        schema:
+          type: integer
+      - name: province_id
+        in: query
+        description: ID de Provincia
+        schema:
+          type: integer
+      - name: district_id
+        in: query
+        description: ID de Distrito
+        schema:
+          type: integer
+      - name: per_page
+        in: query
+        description: Cantidad de elementos por página
+        schema:
+          type: string
+      - name: page
+        in: query
+        description: Página
+        schema:
+          type: string
+      - name: from
+        in: query
+        schema:
+          type: string
+          format: date
+        description: 'Rango: Fecha Inicial'
+      - name: to
+        in: query
+        schema:
+          type: string
+          format: date
+        description: 'Rango: Fecha Final'
+      - name: filter_range_date
+        in: query
+        schema:
+          type: string
+          enum:
+          - created_at
+          - updated_at
+          - start_date
+          - end_date
+        description: |+
+          Rango: Usar
+
+            * **[created_at]** Fechas de Creación de los Registros <small>*(Por defecto)*</small>
+            * **[updated_at]** Fechas de Actualización de los Registros
+
+      - name: sort
+        in: query
+        schema:
+          type: string
+          enum:
+          - created_at:desc
+          - created_at:asc
+          - updated_at:desc
+          - updated_at:asc
+        description: |+
+          #### Ordenar:
+
+            * **[created_at:desc]** Últimos creados al inicio
+            * **[created_at:asc]** Últimos creados al final
+            * **[updated_at:desc]** Últimos actualizados al inicio
+            * **[updated_at:asc]** Últimos actualizados al final
+
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: Lista de Ubicaciones
+          headers:
+            Per-page:
+              type: integer
+              description: Total de elementos por página
+            Total:
+              type: integer
+              description: Total de elementos
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/geolocation"
+    post:
+      summary: Crear Ubicacion
+      tags:
+      - Ubicaciones
+      parameters: []
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: Ubicacion creado
+        '422':
+          description: Error al crear Ubicacion
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                geolocation:
+                  type: object
+                  properties:
+                    country_id:
+                      type: integer
+                      description: ID País
+                    department_id:
+                      type: integer
+                      description: ID Departamento
+                    province_id:
+                      type: integer
+                      description: ID Provincia
+                    district_id:
+                      type: integer
+                      description: ID Distrito
+  "/geolocations/{id}":
+    get:
+      summary: Detalle de una Ubicacion
+      tags:
+      - Ubicaciones
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: Ubicacion encontrado
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/geolocation"
+        '404':
+          description: Ubicacion no encontrado
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
+    patch:
+      summary: Actualizar Ubicaciones
+      tags:
+      - Ubicaciones
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: Ubicacion actualizado
+        '422':
+          description: Error al actualizar el Ubicacion
+        '404':
+          description: Ubicacion no encontrado
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                geolocation:
+                  type: object
+                  properties:
+                    country_id:
+                      type: integer
+                      description: ID País
+                    department_id:
+                      type: integer
+                      description: ID Departamento
+                    province_id:
+                      type: integer
+                      description: ID Provincia
+                    district_id:
+                      type: integer
+                      description: ID Distrito
+    delete:
+      summary: Eliminar Ubicacion
+      tags:
+      - Ubicaciones
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: Ubicacion eliminado
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Estado
+                  message:
+                    type: string
+                    description: Mensaje o descripción
+                  data:
+                    "$ref": "#/components/schemas/geolocation"
+        '422':
+          description: Error al eliminar Ubicacion
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/unprocessable_entity"
+        '404':
+          description: Ubicacion eliminado no encontrada
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
   "/locations":
     get:
       summary: Lista de Campus
@@ -2426,6 +2663,34 @@ components:
           "$ref": "#/components/schemas/user"
         location:
           "$ref": "#/components/schemas/location"
+      required:
+      - id
+    geolocation:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: ID
+        country_id:
+          type: integer
+          description: ID pais
+        department_id:
+          type: integer
+          description: ID Departamento
+        province_id:
+          type: integer
+          description: ID Provincia
+        district_id:
+          type: integer
+          description: ID Distrito
+        created_at:
+          type: string
+          format: date-time
+          description: Fecha de creación
+        updated_at:
+          type: string
+          format: date-time
+          description: Fecha de actualización
       required:
       - id
 ...
